@@ -6,6 +6,7 @@ libece 0.4 ():
 	  library dirs
 	- api: return ECE_RC_INVALIDCERT upon certification validation failures
 	- logging: log level can be configured at runtime in ece.json (log/lev)
+	- sbsim: make certs valid from yesterday to avoid races
 
 libece 0.3 (25/09/2013):
 	- fix certificate request encoding
